--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
     <div class="container text-center">
         <h2 class="mb-4">About Me</h2>
         <p class="lead">
-            I am a full time student at Technological University Dublin studying computing with software development.I have experience in programming,
-             web development and working with data. I enjoy creating projects that challenge me to learn new skills explore new technologies. I am currently working on my 4th year project 
-             and continuing to build my experience in software development.
+            Hello, my name is Christopher but i go by Chris. I am a full time student at Technological University Dublin studying computing with software development. I have experience in programming,
+            web development and data analysis. I enjoy creating projects that challenge me to learn new skills and explore new technologies. I am currently working on my 4th year project 
+            and continuing to build my experience in software development.
         </p>
     </div>
     </section>
@@ -81,8 +81,10 @@
 
     <section id="education" class="py-5">
     <div class="container">
-        <h2 class="mb-4">Education</h2>
-        <p>Details about my educational background.</p>
+        <h2 class="mb-4" style="text-align: center;">Education</h2>
+        <p class="lead" style="text-align: center;">I am currently in my 4th year of college, studying Computing with Software Development at Technological University Dublin, Tallaght campus. 
+            Below are my modules and grades from first to third year, with my GPA for each year.
+        </p>
 
         <div class="accordion" id="educationAccordion">
             <div class="accordion-item">
@@ -271,69 +273,95 @@
         <div class="row g-4 mb-5">
             <div class="col-sm-6 col-md-4">
                 <div class="card text-center shadow-sm p-3">
-                    <i class="bi bi-file-code-fill fs-2 mb-2"></i>
+                    <i class="bi bi-file-code-fill fs-2 mb-2" style="color:#3776AB;"></i>
                     <h6>Python</h6>
                     <p class="small text-muted">Scripting, data analysis, algorithms</p>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="card text-center shadow-sm p-3">
-                    <i class="bi bi-code-slash fs-2 mb-2"></i>
+                    <i class="bi bi-code-slash fs-2 mb-2" style="color:#F7DF1E;"></i>
                     <h6>JavaScript</h6>
                     <p class="small text-muted">Front-end development, DOM manipulation, APIs</p>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="card text-center shadow-sm p-3">
-                    <i class="bi bi-laptop fs-2 mb-2"></i>
+                    <i class="bi bi-laptop fs-2 mb-2" style="color:#61DAFB;"></i>
                     <h6>Web Apps</h6>
                     <p class="small text-muted">Building interactive web applications</p>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="card text-center shadow-sm p-3">
-                    <i class="bi bi-file-earmark-code-fill fs-2 mb-2"></i>
+                    <i class="bi bi-file-earmark-code-fill fs-2 mb-2" style="color:#9B4F96;"></i>
                     <h6>C#</h6>
                     <p class="small text-muted">Backend logic, object-oriented programming</p>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="card text-center shadow-sm p-3">
-                    <i class="bi bi-window fs-2 mb-2"></i>
+                    <i class="bi bi-window fs-2 mb-2" style="color:#61DAFB;"></i>
                     <h6>React Native</h6>
                     <p class="small text-muted">Mobile app development for Android/iOS</p>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="card text-center shadow-sm p-3">
-                    <i class="bi bi-server fs-2 mb-2"></i>
+                    <i class="bi bi-server fs-2 mb-2" style="color:#4479A1;"></i>
                     <h6>Databases</h6>
                     <p class="small text-muted">SQL, MySQL, PostgreSQL, database design</p>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="card text-center shadow-sm p-3">
-                    <i class="bi bi-bootstrap fs-2 mb-2"></i>
+                    <i class="bi bi-bootstrap fs-2 mb-2" style="color:#7952B3;"></i>
                     <h6>Bootstrap</h6>
                     <p class="small text-muted">Responsive design, UI components</p>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="card text-center shadow-sm p-3">
-                    <i class="bi bi-git fs-2 mb-2"></i>
+                    <i class="bi bi-git fs-2 mb-2" style="color:#F05032;"></i>
                     <h6>Git & GitHub</h6>
                     <p class="small text-muted">Version control, collaboration, code hosting</p>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="card text-center shadow-sm p-3">
-                    <i class="bi bi-file-earmark-spreadsheet-fill fs-2 mb-2"></i>
+                    <i class="bi bi-file-earmark-spreadsheet-fill fs-2 mb-2" style="color:#207245;"></i>
                     <h6>Data Analysis</h6>
                     <p class="small text-muted">Excel, Pandas, working with datasets</p>
                 </div>
             </div>
         </div>
-    </section>
+
+        <h5 class="mb-3">Achievements</h5>
+        <div class="row g-4">
+            <div class="col-md-6 col-lg-4">
+                <div class="card shadow-sm p-3 h-100">
+                    <i class="bi bi-diagram-3 fs-2 mb-2" style="color:#3DBE29;"></i>
+                    <h6 class="fw-bold">Applegreen Monitoring Challenge</h6>
+                    <p class="small text-muted">Developed a scalable proactive monitoring system in a team for Applegreen sites.</p>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+                <div class="card shadow-sm p-3 h-100">
+                    <i class="bi bi-award-fill fs-2 mb-2" style="color:#FF9900;"></i>
+                    <h6 class="fw-bold">AWS Academy Certificate</h6>
+                    <p class="small text-muted">Completed AWS Academy coursework with hands-on experience in cloud architecture and services.</p>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+                <div class="card shadow-sm p-3 h-100">
+                    <i class="bi bi-cloud-fill fs-2 mb-2" style="color:#00A1F1;"></i>
+                    <h6 class="fw-bold">AWS Jam Challenge Participant</h6>
+                    <p class="small text-muted">Solved real-world cloud computing challenges using AWS services, enhancing my cloud skills.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
     <section id="hobbies" class="bg-light py-5">
     <div class="container text-center">
@@ -435,6 +463,15 @@
     </div>
   </div>
 </div>
+
+<footer class="bg-dark text-light text-center py-2 mt-5">
+    <p>© 2025 Christopher Adeyemi</p>
+    <p>
+        <a href="mailto:chris.adeyemi15@gmail.com" class="text-light me-3">Email</a>
+        <a href="https://github.com/chrisadeyemi" target="_blank" class="text-light me-3">GitHub</a>
+        <a href="https://linkedin.com/in/chrisadeyemi" target="_blank" class="text-light">LinkedIn</a>
+    </p>
+</footer>
 
 
 
